Update forge for breaking changes.
Lots of cleanups, many things have been removed.
BakedPipeline should still work, however, is now pending a rewrite..